syntax = "proto3";

import "common.proto";
import "google/protobuf/timestamp.proto";

package ThmServices;

service MarketData {
    rpc Subscribe(DepthDataSubscribeReq) returns (stream DepthDataSubscribeRsp);
    rpc Unsubscribe(DepthDataUnscribeReq) returns (DepthDataUnscribeRsp);
}

message DepthDataSubscribeReq {
    PROVIDER_TYPE provider = 1;
    string exchange = 2;
    string symbol = 3;
}

message DepthDataSubscribeRsp {
    PROVIDER_TYPE provider = 1;
    string exchange = 2;
    string type = 3;
    string symbol = 4;
    google.protobuf.Timestamp date_time = 5;
    
    double bid1 = 16;
    double bid2 = 17;
    double bid3 = 18;
    double bid4 = 19;
    double bid5 = 20;
   
    int32 bQty1 = 21;
    int32 bQty2 = 22;
    int32 bQty3 = 23;
    int32 bQty4 = 24;
    int32 bQty5 = 25;
        
    double ask1 = 26;
    double ask2 = 27;
    double ask3 = 28;
    double ask4 = 29;
    double ask5 = 30;
   
    int32 aQty1 = 31;
    int32 aQty2 = 32;
    int32 aQty3 = 33;
    int32 aQty4 = 34;
    int32 aQty5 = 35;
}

message DepthDataUnscribeReq {
    PROVIDER_TYPE provider = 1;
    string exchange = 2;
    string symbol = 3;
}

message DepthDataUnscribeRsp {
    string message = 1;
}
