syntax = "proto3";

option csharp_namespace = "ThmServiceAdapter.ServiceAdapter";
package depth_data;

service DepthDataService {
    rpc Subscribe(DepthDataSubscribeReq) returns (stream DepthDataSubscribeRsp);
    rpc Unsubscribe(DepthDataUnscribeReq) returns (DepthDataUnscribeRsp);
}

message DepthDataSubscribeReq { // subscirbe
    string symbol = 1;
}

message DepthDataSubscribeRsp {
    string symbol = 1;
    string contract = 2;
    string exchange = 3;
    
    double bid1 = 5;
    double bid2 = 6;
    double bid3 = 7;
    double bid4 = 8;
    double bid5 = 9;
   
    double bQty1 = 11;
    double bQty2 = 12;
    double bQty3 = 13;
    double bQty4 = 14;
    double bQty5 = 15;
        
    double ask1 = 21;
    double ask2 = 22;
    double ask3 = 23;
    double ask4 = 24;
    double ask5 = 25;
   
    double aQty1 = 31;
    double aQty2 = 32;
    double aQty3 = 33;
    double aQty4 = 34;
    double aQty5 = 35;
}

message DepthDataUnscribeReq {
    string symbol = 1;
}

message DepthDataUnscribeRsp {

}
